--- a/judo/pom.xml
+++ b/judo/pom.xml
@@ -6,6 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.1.2</version>
+		<relativePath/>
 	</parent>
 	<groupId>com.springsport</groupId>
 	<artifactId>judo</artifactId>
@@ -13,9 +14,11 @@
 	<packaging>war</packaging>
 	<name>judo</name>
 	<description>Demo Spring Boot project for Judo Club data management</description>
+	
 	<properties>
 		<java.version>17</java.version>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -31,13 +34,6 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
