--- a/judo/src/main/resources/application.properties
+++ b/judo/src/main/resources/application.properties
@@ -1,7 +1,1 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=testPsw
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.show-sql=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.profiles.active=dev
