--- a/judo/src/main/resources/application-dev.properties
+++ b/judo/src/main/resources/application-dev.properties
@@ -6,4 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+spring.mvc.view.prefix=/WEB-INF/jsp/
+sprint.mvc.view.suffix=.jsp
+
 app.version=0.0.1
