--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
 		<relativePath/>
 	</parent>
 	<groupId>com.springsport</groupId>
-	<artifactId>judo</artifactId>
+	<artifactId>core</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>judo</name>
-	<description>Demo Spring Boot project for Judo Club data management</description>
+	<name>springsport.core</name>
+	<description>Demo Spring Boot project for Sports Clubs data management</description>
 	
 	<properties>
 		<java.version>17</java.version>
