switching to JWT + OAuth2 SPA

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,17 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=testPsw
+
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+app.security.oauth2.client.id=my-client-dev
+app.security.oauth2.client.redirectUri=http://localhost:8080/login/oauth2/code/my-client-dev
+
+app.security.user.name=leonardo
+app.security.user.password=testPsw
+app.security.user.roles=USER,ADMIN
 
 app.version=0.0.1
