--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,5 +5,12 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+app.security.oauth2.client.id=${OAUTH2_CLIENT_ID}
+app.security.oauth2.client.redirectUri=${OAUTH2_CLIENT_REDIRECT}
+
+app.security.user.name=${APP_USER_NAME}
+app.security.user.password=${APP_USER_PASSWORD}
+app.security.user.roles=USER,ADMIN
+
 app.version=0.0.1
 logging.level.org=WARN
