switching to JWT + OAuth2 SPA

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,9 +9,13 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 app.security.oauth2.client.id=my-client-dev
 app.security.oauth2.client.redirectUri=http://localhost:8080/login/oauth2/code/my-client-dev
+app.security.oauth2.client.authorizationUri=http://localhost:8081/oauth2/authorize
+app.security.oauth2.client.tokenUri=http://localhost:8081/oauth2/token
+app.security.oauth2.client.userInfoUri=http://localhost:8081/userinfo
 
 app.security.user.name=leonardo
 app.security.user.password=testPsw
 app.security.user.roles=USER,ADMIN
 
 app.version=0.0.1
+logging.level.org=WARN
