switching to JWT + OAuth2 SPA

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,21 +1,20 @@
+# --- Database ---
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
-
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-app.security.oauth2.client.id=${OAUTH2_CLIENT_ID}
-app.security.oauth2.client.redirectUri=${OAUTH2_CLIENT_REDIRECT}
-app.security.oauth2.client.authorizationUri=${OAUTH2_CLIENT_AUTH_URI}
-app.security.oauth2.client.tokenUri=${OAUTH2_CLIENT_TOKEN_URI}
-app.security.oauth2.client.userInfoUri=${OAUTH2_CLIENT_USERINFO_URI}
-app.security.oauth2.client.userNameAttribute=${OAUTH2_CLIENT_USER_NAME_ATTRIBUTE:sub}
-
+# --- In-memory user ---
 app.security.user.name=${APP_USER_NAME}
 app.security.user.password=${APP_USER_PASSWORD}
 app.security.user.roles=USER,ADMIN
 
+# --- JWT settings ---
+jwt.secret=${JWT_SECRET}
+jwt.expiration-ms=${JWT_EXPIRATION_MS:3600000}
+
+# --- Application ---
 app.version=0.0.1
 logging.level.org=WARN
